--- a/This is me.html
+++ b/This is me.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-<p>What should I say. I dont know</p>
+    <h1>Elton Hazel</h1>
+        <p>I worked in the film industy and now I'm going into coding</p>
+    
 </body>
 </html>
